--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#2196f3</color>
     <color name="colorAccent">#051639</color>
     <color name="white">#fff</color>
+    <color name="gray">#DFDFDF</color>
+
     <!-- Secondary brand color. -->
 </resources>
